# lrcforge

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  PLAN.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
spike/: README.md  spike.py
src/lrcforge/: __init__.py  __main__.py  config.py
src/lrcforge/adapters/: __init__.py
src/lrcforge/adapters/alignment/: _regroup.py  mlx_aligner.py  mms_aligner.py  whisper_aligner.py
src/lrcforge/adapters/audio/: soundfile_loader.py
src/lrcforge/adapters/fakes/: __init__.py  stages.py
src/lrcforge/adapters/language/: whisper_lid.py
src/lrcforge/adapters/lrc/: enhanced_lrc_writer.py
src/lrcforge/adapters/lyrics/: _parse.py  deferred_provider.py  faster_whisper_provider.py  mlx_provider.py  userfile_provider.py
src/lrcforge/adapters/separation/: demucs_separator.py
src/lrcforge/cli/: app.py
src/lrcforge/di/: __init__.py  container.py  providers.py  web.py
src/lrcforge/domain/: __init__.py  _types.py  alignment.py  audio.py  errors.py  job.py  language.py  lrc.py  lyrics.py  progress.py
src/lrcforge/jobs/: __init__.py  context.py  executor.py  progress.py  runner.py  store.py
src/lrcforge/pipeline/: __init__.py  options.py  orchestrator.py
src/lrcforge/ports/: __init__.py  aligner.py  audio_loader.py  language_detector.py  lrc_writer.py  lyrics_provider.py  progress.py  separator.py
src/lrcforge/service/: __init__.py  api.py  app_factory.py
src/lrcforge/service/static/: index.html
tests/: conftest.py
tests/golden/: test_lrc_golden.py
tests/golden/__snapshots__/: test_lrc_golden.ambr
tests/service/: test_api.py
tests/unit/: test_alignment_regroup.py  test_audio_loader.py  test_cli.py  test_demucs_separator.py  test_job_executor.py  test_job_store.py  test_lrc.py  test_lyrics_parse.py  test_pipeline.py  test_real_container.py  test_whisper_lid.py
